# Flappy-Bird-Rust-Embedded

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  clippy.toml  rustfmt.toml  save.ron
.agents/skills/architect-decision-records/: SKILL.md
.agents/skills/docs-architect/: SKILL.md
.agents/skills/memory-safety-patterns/resources/: implementation-playbook.md
.github/workflows/: ci.yml
assets/: config.ron
docs/adr/: 0001-record-architecture-decisions.md  0002-domain-driven-ecs-structure.md
patches/gpu-allocator/: Cargo.toml
src/: main.rs
src/core/: config.rs  mod.rs  save.rs  state.rs
src/game/: collision.rs  effects.rs  environment.rs  mod.rs  player.rs
src/hardware/: mod.rs
src/ui/: mod.rs
todo/migrate-versions/: README.md
todo/migrating-versions/: 0.18to0.19.md  README.md
tools/cargo-qc/: .qc_history.md  Cargo.toml  README.md
tools/cargo-qc/src/: main.rs
