[workspace]
members = [
    ".",
    "tools/cargo-qc"
]

[package]
name = "flappy_bird"
version = "0.4.3"
edition = "2024"

[dependencies]
bevy = "0.19.0"
bevy_hanabi = { version = "0.19.0", default-features = false, features = ["2d"] }
rand = "0.9.1"
ron = "0.12.2"
serde = { version = "1.0.229", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

# Fix: wgpu-hal 29.x uses windows 0.62 types but gpu-allocator 0.28.0 resolves
# to windows 0.58.0 (via gilrs), causing DX12 type mismatches in suballocation.rs.
# This patch forces gpu-allocator to use windows 0.62 to match wgpu-hal.
[patch.crates-io]
gpu-allocator = { path = "patches/gpu-allocator" }
